working dell module

--- a/ansible-docker/Dockerfile
+++ b/ansible-docker/Dockerfile
@@ -19,7 +19,7 @@ RUN wget https://bootstrap.pypa.io/get-pip.py
 RUN python3 get-pip.py
 RUN pip3 install pywinrm kerberos requests_kerberos botocore boto3 pyodbc ansible
 
+
 RUN apt-get install -y git
 RUN git clone -b devel --single-branch https://github.com/dell/dellemc-openmanage-ansible-modules.git
-RUN cd dellemc-openmanage-ansible-modules
-RUN python3 install.py
+RUN cd dellemc-openmanage-ansible-modules/ && python3 ./install.py
